Main improvement: Add JWT authentication

--- a/Crawler/Crawler/appsettings.json
+++ b/Crawler/Crawler/appsettings.json
@@ -8,5 +8,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "ProductionDb": "Data Source=db-mssql16.pjwstk.edu.pl;Initial Catalog=s17094;Integrated Security=True;Encrypt=false"
-  }
+  },
+  "Host": "http://localhost:5273"
 }
